@@ -190,7 +190,6 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 	: span(static_cast<pointer>(__arr.data()), _ArrayExtent)
 	{ }
 
-    public:
       template<ranges::contiguous_range _Range>
 	requires (_Extent == dynamic_extent)
 	  && (!__detail::__is_std_span<remove_cvref_t<_Range>>::value)
@@ -404,6 +403,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
     };
 
   // deduction guides
+
   template<typename _Type, size_t _ArrayExtent>
     span(_Type(&)[_ArrayExtent]) -> span<_Type, _ArrayExtent>;
 
@@ -416,7 +416,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
   template<contiguous_iterator _Iter, typename _Sentinel>
     span(_Iter, _Sentinel)
-      -> span<remove_reference_t<ranges::range_reference_t<_Iter>>>;
+      -> span<remove_reference_t<iter_reference_t<_Iter>>>;
 
   template<typename _Range>
     span(_Range &&)
